--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_username" />
 
     <Button
-        android:id="@+id/button_signup"
+        android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="152dp"
