--- a/src/app/src/main/res/layout/activity_home.xml
+++ b/src/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     tools:context=".view.HomeActivity">
 
     <TextView
-        android:id="@+id/text_username"
+        android:id="@+id/text_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="19dp"
