--- a/src/app/src/main/res/layout/activity_mood_history.xml
+++ b/src/app/src/main/res/layout/activity_mood_history.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.mood.MoodHistoryActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/mood_history"
             android:layout_width="match_parent"
-            android:layout_height="614dp"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="3dp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
