Change fragment to activity and fix errors

--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,8 @@
         android:layout_margin="10dp"
         app:fabSize="normal"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/pictureContainer"
@@ -27,7 +28,8 @@
         android:background="@color/colorPrimary"
         android:padding="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/design_default_color_primary">
+        android:backgroundTint="@color/design_default_color_primary"
+        >
 
 
         <com.google.android.material.button.MaterialButton
