--- a/src/app/src/main/res/layout/activity_edit_profile.xml
+++ b/src/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/editprofile"
-    tools:context=".EditProfile">
+    tools:context=".view.EditProfile">
 
 
     <androidx.appcompat.widget.Toolbar
