--- a/src/app/src/main/res/layout/activity_home.xml
+++ b/src/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.HomeActivity">
 
+    <Button
+        android:id="@+id/button_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="260dp"
+        android:text="Search"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_logout"
+        app:layout_constraintVertical_bias="0.867" />
+
     <TextView
         android:id="@+id/text_email"
         android:layout_width="wrap_content"
