--- a/src/app/src/main/res/layout/activity_search.xml
+++ b/src/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.SearchActivity">
+    tools:context=".view.SearchActivity"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,19 +17,25 @@
             android:id="@+id/search_badge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8sp" />
+            android:layout_marginStart="8sp" >
+        </androidx.appcompat.widget.SearchView>
 
         <EditText
             android:id="@+id/search_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/search_hint" />
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="@string/search_hint"
+            android:inputType="textPersonName"
+            />
 
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_button_text" />
+
     </LinearLayout>
 
     <ListView
