--- a/src/app/src/main/res/layout/activity_home.xml
+++ b/src/app/src/main/res/layout/activity_home.xml
@@ -7,11 +7,11 @@
     tools:context=".view.HomeActivity">
 
     <Button
-        android:id="@+id/button_search"
+        android:id="@+id/button_maps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="260dp"
-        android:text="Search"
+        android:text="Maps"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_logout"
