--- a/src/app/src/main/res/layout/activity_find.xml
+++ b/src/app/src/main/res/layout/activity_find.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="@string/search_button_text" />
     </LinearLayout>
 
     <ListView
