--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
-            android:text="Edit Profile"
+            android:text="Logout"
             android:textColor="#FFFFFF"
             app:borderWidth="0dp"
             app:cornerRadius="20dp"
@@ -72,18 +72,10 @@
             android:layout_height="wrap_content"
             android:text="Followers"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/MoodEventButton"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/FollowingButton"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/MoodEventButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MoodEvent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/FollowersButton"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
