--- a/src/app/src/main/res/layout/content.xml
+++ b/src/app/src/main/res/layout/content.xml
@@ -1,54 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/mood_event_item"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        >
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:minHeight="50dp"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardElevation="4dp"
+        card_view:cardCornerRadius="3dp">
 
-        <ImageView
-            android:id="@+id/icon_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#00000000" />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_margin="2dp"
+            android:weightSum="2"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/event_mood"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:text="Mood"
-                android:textSize="20sp"/>
+                android:layout_weight="1"
+                android:layout_margin="2dp"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/icon_image"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:background="#00000000" />
+                <TextView
+                    android:id="@+id/event_mood"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Mood"
+                    android:textColor="#404040"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/event_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Date"
+                    android:textColor="#404040"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <Button
+                android:focusable="false"
+                android:id="@+id/delete_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="@color/colorAccent"
+                android:text="Delete" />
         </LinearLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/event_date"
-            android:textSize="30sp"
-            android:layout_marginLeft="20dp"
-            android:text="Date">
-        </TextView>
-
-        <Button
-            android:id="@+id/delete_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginBottom="20dp"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:text="Delete" />
-
-
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
