--- a/src/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/src/app/src/main/res/layout/activity_add_mood_event.xml
@@ -6,82 +6,106 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.mood.AddMoodEventActivity">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+                <!--Put form controls here-->
+                <TextView
+                    android:id="@+id/MoodTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mood"
+                    android:textSize="10pt">
+                </TextView>
 
-            <!--Put form controls here-->
-            <TextView
-                android:id="@+id/MoodTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mood"
-                android:textSize="10pt">
-            </TextView>
+                <Spinner
+                    android:id="@+id/mood_type_selector"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"/>
 
-            <Spinner
-                android:id="@+id/mood_type_selector"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"/>
+                <TextView
+                    android:id="@+id/reason_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reason"
+                    android:textSize="10pt">
+                </TextView>
+                <EditText
+                    android:id="@+id/reason_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:inputType="textMultiLine"
+                    android:maxLength="20"/>
+                <TextView
+                    android:id="@+id/location_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:textSize="10pt">
+                </TextView>
+                <EditText
+                    android:id="@+id/latitude"
+                    android:layout_width="match_parent"
+                    android:hint="Lat"
+                    android:layout_height="wrap_content"/>
+                <EditText
+                    android:id="@+id/longitude"
+                    android:hint="Lng"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/reason_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Reason"
-                android:textSize="10pt">
-            </TextView>
-            <EditText
-                android:id="@+id/reason_edit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:maxLength="20"/>
-            <TextView
-                android:id="@+id/location_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Location"
-                android:textSize="10pt">
-            </TextView>
-            <EditText
-                android:id="@+id/latitude"
-                android:layout_width="match_parent"
-                android:hint="Lat"
-                android:layout_height="wrap_content"/>
-            <EditText
-                android:id="@+id/longitude"
-                android:hint="Lng"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/social_sitation_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Social Situation"
+                    android:textSize="10pt">
+                </TextView>
+                <Spinner
+                    android:id="@+id/social_sitation_selector"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/btn_dropdown"
+                    android:spinnerMode="dropdown"/>
 
-            <TextView
-                android:id="@+id/social_sitation_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Social Situation"
-                android:textSize="10pt">
-            </TextView>
-            <Spinner
-                android:id="@+id/social_sitation_selector"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"/>
-
-            <Button
-                android:id="@+id/add_mood_event_submit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Submit" />
-
-        </LinearLayout>
+                <Button
+                    android:id="@+id/upload_choose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Image"
+                    android:backgroundTint="@color/colorPrimaryDark"/>
+                <Button
+                    android:id="@+id/upload_cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cancel Upload"
+                    android:visibility="gone"
+                    android:backgroundTint="@color/colorAccent"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/add_mood_event_submit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Submit" />
+                    <ImageView
+                        android:id="@+id/me_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </RelativeLayout>
+            </LinearLayout>
+        </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomBar"
