working on button logic

--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<Fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,4 +9,24 @@
     android:layout_height="match_parent"
     tools:context=".view.MapActivity">
 
-</fragment>
+
+    <Button
+        android:id="@+id/show_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:text="Show"
+        android:padding="10dp"
+        android:paddingRight="10dp"/>
+
+    <Button
+        android:id="@+id/hide_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:text="Hide"
+        android:padding="10dp"
+        android:layout_marginTop="40dp"
+        android:paddingRight="10dp"/>
+
+</Fragment>
