--- a/src/app/src/main/res/layout/find_content.xml
+++ b/src/app/src/main/res/layout/find_content.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,10 +10,16 @@
         android:id="@+id/username_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="USERNAME"
         android:padding="20dp"
-        android:text="username"
         android:textSize="30sp">
     </TextView>
+
+<!--    <Button-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="+follow">-->
+<!--    </Button>-->
 
 </LinearLayout>
 
